// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-view wp-components-spacer css-1mfy76c"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render margin 1`] = `
<div
  class="wp-components-view wp-components-spacer css-12rie6d"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginBottom 1`] = `
<div
  class="wp-components-view wp-components-spacer css-10qahn"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginLeft 1`] = `
<div
  class="wp-components-view wp-components-spacer css-tpwyk"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginRight 1`] = `
<div
  class="wp-components-view wp-components-spacer css-16edvvt"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginTop 1`] = `
<div
  class="wp-components-view wp-components-spacer css-19k6s5w"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginX 1`] = `
<div
  class="wp-components-view wp-components-spacer css-115fg9r"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginY 1`] = `
<div
  class="wp-components-view wp-components-spacer css-q61xkv"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render padding 1`] = `
<div
  class="wp-components-view wp-components-spacer css-119spbm"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingBottom 1`] = `
<div
  class="wp-components-view wp-components-spacer css-1ltjrvp"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingLeft 1`] = `
<div
  class="wp-components-view wp-components-spacer css-1a6zbmj"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingRight 1`] = `
<div
  class="wp-components-view wp-components-spacer css-1k5ikrs"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingTop 1`] = `
<div
  class="wp-components-view wp-components-spacer css-awx1ts"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingX 1`] = `
<div
  class="wp-components-view wp-components-spacer css-1f9n69c"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingY 1`] = `
<div
  class="wp-components-view wp-components-spacer css-123g9o2"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;
